# Django-CRUD

./: .dockerignore  Dockerfile  README.md  manage.py  pyproject.toml
apps/pedidos/: urls.py  views.py
apps/productos/: apps.py  models.py  urls.py  views.py
apps/productos/migrations/: 0001_initial.py
gestion_pedidos/: __init__.py  asgi.py  urls.py  wsgi.py
gestion_pedidos/settings/: __init__.py  base.py  development.py
templates/: base.html
templates/productos/: agregar_modal.html  list_products.html
